[gd_scene load_steps=10 format=3 uid="uid://dbjhtkard0k55"]

[ext_resource type="Shader" path="res://shaders/redEnemy.gdshader" id="1_0ykx2"]
[ext_resource type="Script" path="res://scripts/gameFolder/BulkEnemy.gd" id="2_2qrhc"]
[ext_resource type="Texture2D" uid="uid://dbwaqmo4q61r5" path="res://assets/BulkEnemy (1).png" id="3_c7wob"]
[ext_resource type="AudioStream" uid="uid://bv11k7rmmyyf4" path="res://assets/hitSounds/punch-1-166694.mp3" id="4_ccvap"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g6bmg"]
resource_local_to_scene = true
shader = ExtResource("1_0ykx2")
shader_parameter/damage_value = 0.0
shader_parameter/alpha_value = 1.0

[sub_resource type="Curve" id="Curve_exf2e"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.72592, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_v5mem"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, 2), 0.0, 0.0, 0, 0, Vector2(1, -2), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_n7pqp"]
_data = [Vector2(0, 0), 0.0, 4.67277, 0, 0, Vector2(0.101124, 1), 1.63004, 1.63004, 0, 0, Vector2(1, 0), -1.65511, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_e0b24"]
offsets = PackedFloat32Array(0, 0.48, 1)
colors = PackedColorArray(0.454902, 0.105882, 0.278431, 1, 0.454902, 0.105882, 0.278431, 1, 0.788235, 0.854902, 0.972549, 1)

[node name="BulkEnemy" type="Area2D" groups=["Enemy"]]
z_index = 3
material = SubResource("ShaderMaterial_g6bmg")
collision_layer = 2
script = ExtResource("2_2qrhc")

[node name="SplatchoEnemy" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(0, -11)
rotation = 1.5708
texture = ExtResource("3_c7wob")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-372, -409)
rotation = 1.5708
polygon = PackedVector2Array(51, -772, 745, -773, 1033, 27, -236, 27)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = 5
position = Vector2(-10, 79)
rotation = 1.5708
scale = Vector2(15, 15)
emitting = false
amount = 10
lifetime = 2.0
one_shot = true
speed_scale = 2.0
explosiveness = 0.9
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(1, 1)
spread = 180.0
gravity = Vector2(0, 600)
initial_velocity_min = 25.0
initial_velocity_max = 50.0
angle_min = -90.0
angle_max = 90.0
scale_amount_min = 30.0
scale_amount_max = 45.0
scale_amount_curve = SubResource("Curve_exf2e")
color = Color(0.807843, 0, 1, 1)

[node name="CharHitPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ccvap")

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2(-404, 6)
rotation = 1.57079
emitting = false
amount = 12
fract_delta = false
emission_shape = 3
emission_rect_extents = Vector2(500, 1)
direction = Vector2(0, 1)
spread = 14.09
gravity = Vector2(0, 0)
initial_velocity_min = 141.41
initial_velocity_max = 868.68
angle_min = -180.0
angle_max = 180.0
angle_curve = SubResource("Curve_v5mem")
scale_amount_min = 61.61
scale_amount_max = 102.01
scale_amount_curve = SubResource("Curve_n7pqp")
color = Color(0.791999, 0.791999, 0.791999, 1)
color_ramp = SubResource("Gradient_e0b24")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
